<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_title_section1">All</string>
    <string name="main_title_section2">Filtered</string>
    <string name="main_title_section3">To Visit</string>
    <string name="main_title_section4">Visited</string>
    <string name="filter_title_section1">Majors</string>
    <string name="filter_title_section2">Positions</string>
    <string name="filter_title_section3">Degrees</string>
    <string name="filter_title_section4">Work Auths</string>
    <string name="filter_title_button1">Clear Filter</string>
    <string name="filter_title_button2">Apply</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Filter</string>
    <string name="title_activity_filer">Filter</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_fair_map">FairMap</string>
    <string name="title_activity_app_start">AppStart</string>
    <string name="title_activity_data">Data</string>
    <string name="title_activity_main_activitys">MainActivitys</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="whenTv">When</string>
    <string name="whereTv">Where</string>
    <string name="aboutTv">About</string>
    <string name="contactTv">For any queries please contact</string>
    <string name="app_name">49erCareerFair</string>
    <string name="action_sort_asc">Sort From A - Z</string>
    <string name="action_sort_desc">Sort From Z - A</string>
    <string name="action_clear">Clear Filters</string>
    <string name="action_sort_status">Sort By Status</string>
    <string name="action_sort_selected">Sort Selected</string>
    <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>
    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="buttnCalendar">Add To Calendar</string>
    <string name="buttnCall">Phone Number</string>
    <string name="bttnEmail">Email</string>
    <string name="title_activity_announcement_list">Announcements</string>

=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_title_section1">All</string>
    <string name="main_title_section2">Filtered</string>
    <string name="main_title_section3">To Visit</string>
    <string name="main_title_section4">Visited</string>
    <string name="filter_title_section1">Majors</string>
    <string name="filter_title_section2">Positions</string>
    <string name="filter_title_section3">Degrees</string>
    <string name="filter_title_section4">Work Auths</string>
    <string name="filter_title_button1">Clear Filter</string>
    <string name="filter_title_button2">Apply</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Filter</string>
    <string name="title_activity_filer">Filter</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_fair_map">FairMap</string>
    <string name="title_activity_app_start">AppStart</string>
    <string name="title_activity_data">Data</string>
    <string name="title_activity_main_activitys">MainActivitys</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="whenTv">When</string>
    <string name="whereTv">Where</string>
    <string name="aboutTv">About</string>
    <string name="contactTv">For any queries please contact</string>
    <string name="app_name">49erCareerFair</string>
    <string name="action_sort_asc">Sort From A - Z</string>
    <string name="action_sort_desc">Sort From Z - A</string>
    <string name="action_clear">Clear Filters</string>
    <string name="action_sort_status">Sort By Status</string>
    <string name="action_sort_selected">Sort Selected</string>
    <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>
    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="preview_activity_overview">Overview</string>
    <string name="preview_activity_website">Website</string>
    <string name="preview_activity_majors">Majors Recruited</string>
    <string name="preview_activity_positions">Position Types</string>
    <string name="preview_activity_degree">Degree Levels Recruited</string>
    <string name="preview_activity_workauth">Work Authorization Desired</string>
    <string name="preview_activity_showmap">Show Map</string>

>>>>>>> 2c5d44b1cd7214fe649610cbee13a2224612ef77
</resources>