<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/eventList_padding"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textViewEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_overlay"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWhen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top_padding"
        android:text="@string/whenTv" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewTimeDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top_padding"
        android:text="@string/whereTv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top_padding"
        android:text="@string/aboutTv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top_padding"
        android:text="@string/contactTv" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewContactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttnEmail" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttnCall" />

    <Button
        android:id="@+id/buttonCalender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttnCalendar" 
        />

</LinearLayout>
